# symposium

./: README.md  aiogram_example.py  aiogram_window.py  btn_example.py  pyproject.toml  telebot_example.py  telebot_window.py
example/: aiogram_bot.py  dialogs.py  telebot_bot.py
src/symposium/: events.py  handle.py  render.py  router.py  widgets.py
src/symposium/core/: __init__.py  context.py  finder.py  render.py  router.py
src/symposium/integrations/: aiogram.py  aiogram_states.py  telebot.py  telebot_states.py  telegram_base.py
src/symposium/widgets/: base.py  group.py  keyboard.py  text.py
src/symposium/windows/: context.py  dialog.py  manager_factory.py  memory_storage.py  registry.py  simple_manager.py  stack.py  state.py  storage.py  transition_manager.py  widget_context.py  window.py
src/symposium/windows/impl/: memory_storage.py  simple_manager.py  transitions.py
src/symposium/windows/protocols/: dialog_manager.py  storage.py  transition_manager.py  window_sender.py
symposium/: aiogram.py  events.py  handle.py  render.py  router.py  telebot.py  widgets.py
symposium/core/: events.py  render.py
symposium/integrations/: telebot.py
