[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "symposium"
version = "0.1"
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = { text = "Apache-2.0" }
description = "GUI framework for messenger bots"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'exceptiongroup>=1.1.3; python_version<"3.11"',
]

[project.urls]
"Source" = "https://github.com/Tishka17/symposium"
"Homepage" = "https://github.com/Tishka17/symposium"
"Bug Tracker" = "https://github.com/Tishka17/symposium/issues"
